# pangea-f5-ai-gateway-processor

./: Dockerfile  README.md  pyproject.toml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  service.yaml
src/pangea_f5_ai_gateway_processor/: app.py  processor.py
